fix button alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,9 +121,9 @@ h3{
 }
 
 .submit{
-	padding: 6px 12px;
+	padding: 4px 12px;
 	-webkit-border-radius: 30px;-moz-border-radius: 30px;border-radius: 30px;
-	margin-left: -82px;
+	margin-left: -78px;
 	margin-top: 12px;
 	background: #eeeeee;
 	border: none;
